# sxui

./: .gitignore  CMakeLists.txt  README.md
docs/: PLAN.md
include/sxui/: Gauge.h  ImageView.h  Sxui.h  Theme.h  Toggle.h
src/: BarChart.cpp  CMakeLists.txt  FileBrowser.cpp  Gauge.cpp  ImageView.cpp  LineChart.cpp  Panel.cpp  Style.cpp  Sxui.cpp  Sxui.h  Theme.cpp  Toggle.cpp
src/charts/: BarChart.cpp  LineChart.cpp  LineChart.h
src/core/: Style.cpp  Style.h  Theme.cpp
src/media/: Timeline.cpp  Timeline.h  VideoView.cpp  VideoView.h
src/widgets/: FileBrowser.cpp  FileBrowser.h  Gauge.cpp  Gauge.h  ImageView.cpp  Panel.cpp  Panel.h  ScrollArea.cpp  ScrollArea.h  TableEditor.cpp  TableEditor.h  Toggle.cpp  Workspace.cpp  Workspace.h
sxui/: CMakeLists.txt  Sxui.h
sxui/charts/: BarChart.cpp  BarChart.h  LineChart.cpp  LineChart.h
sxui/core/: Style.cpp  Theme.cpp
sxui/widgets/: FileBrowser.cpp  Gauge.cpp  ImageView.cpp  Panel.cpp  Toggle.cpp
